[package]
name = "alectrona-web"
version = "0.1.0"
authors = ["pheki <bilkow@tutanota.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
toml = "*"
lazy_static = "*"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "*"

[dependencies.alectrona]
version = "*"
git = "https://github.com/pheki/alectrona"
default-features = false
features = ["serde_"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCollection",
    "Node",
    "NodeList",
]
